<resources>
    <string name="app_name">POC-Services-2022</string>
    <string name="service_one">Service One</string>
    <string name="service_two">Service Two</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">Un bind</string>
    <string name="get_random_number">Get random number</string>
    <string name="random_number">Random number: </string>
    <string name="send_first_message">Send first message</string>
    <string name="send_second_message">Send second message</string>
    <string name="register_with_remote_service">Register with remote service</string>
    <string name="un_register_with_remote_service">Unregiter with remote service</string>
    <string name="send_client_message">Send client message</string>
</resources>